added more features: pdf, email, translation and search
